# maze

./: CMakeLists.txt
include/: labirintManager.h  map.h  maze.h  player.h  strategy.h
src/: labirintManager.cpp  main.cpp  map.cpp  maze.cpp  player.cpp  strategy.cpp
strategy/: backRevert.cpp  backRevert.h  greedy.cpp  greedy.h  leftHand.cpp  leftHand.h  rightHand.cpp  rightHand.h  strategy.cpp  strategy.h
